infra/k8s/auth-svc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-svc            # will be used as dns to access auth service
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: 'true'       # required for regex
spec:
  ingressClassName: nginx   # apply nginx-ingress controller
  rules:
  - host: mydomain.com      # echo '127.0.0.1   mydomain.com' | sudo tee -a /etc/hosts
    http:
      paths:
      # - path: /api/users/?(.*)
      - path: /api/users/
        pathType: Prefix
        backend:
          service:
            name: auth-svc      # target service.name = auth-svc to apply
            port:
              number: 5000      # app running on container and also service mapped to 5000
...
